objects/vlocity_ins__OrchestrationDependency__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__DependsOnItemId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Depends On</label>
        <referenceTo>vlocity_ins__OrchestrationItem__c</referenceTo>
        <relationshipLabel>Orchestration Dependencies (Depends On)</relationshipLabel>
        <relationshipName>OrchestrationDependenciesDependsOn</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationDependencyDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Dependency Definition</label>
        <referenceTo>vlocity_ins__OrchestrationDependencyDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Dependencies</relationshipLabel>
        <relationshipName>OrchestrationDependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationItemId__c</fullName>
        <label>Orchestration Item</label>
        <referenceTo>vlocity_ins__OrchestrationItem__c</referenceTo>
        <relationshipLabel>Orchestration Dependencies</relationshipLabel>
        <relationshipName>OrchestrationDependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skipped</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Orchestration Dependency</label>
    <nameField>
        <label>Orchestration Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>